--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-node_modules
+# Node modules and build outputs
+node_modules/
+.next/
+dist/
+build/
+
+# Editor / IDE
+.vscode/
+.idea/
+
+# macOS
+.DS_Store
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# Coverage and test output
+coverage/
+jest-report/
+
+# Misc
+*.pem
+*.key
+*.crt
